# tz

./: .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  main.py
app/api/v1/: customers.py  orders.py  vegetables.py
app/db/: base.py
app/models/: models.py
app/schemas/: schemas.py
migrations/: env.py  script.py.mako
migrations/versions/: 001_initial.py  20251023_0828_7f295a746831_002.py  20251023_1639_524237071e55_123.py
nginx/: nginx.conf
tests/: test_api.py
